commit right align text has been fix

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8364,9 +8364,12 @@ gap: 20px !important;
   }
 }
 .strategy_grid .items.odd .item_content {
-  @media (min-width:767px) {
-  text-align: right !important;
-}
+
+  text-align: right;
+  @media (max-width:767px) {
+    text-align: left !important;
+  }
+
 }
 .strategy_grid .items.odd {
   @media (min-width:767px) {
